create discussion and comment api
