# src/route/route.js
@@ -2,6 +2,8 @@ const { Router } = require("express")
 const errorHandlerMiddleware = require("../middleware/errorMiddleware")
 const userRouter = require("./userRoute")
 const problemRouter = require("./problemRoute")
+const discussionRouter = require("./discussionRoute")
+const commentRouter = require("./commentRoute")
 
 const apiRouter = db => {
     const router = Router()
@@ -9,9 +11,9 @@ const apiRouter = db => {
     router.use("/users", userRouter(db))
     router.use("/problems", problemRouter(db))
     // router.use("/submissions")
-    // router.use("/discussions")
-    // router.use("/comments")
-    // router.use("/problem_suggestion")
+    router.use("/discussions", discussionRouter(db))
+    router.use("/comments", commentRouter(db))
+    // router.use("/problem_suggestions")
     // router.use("/leaderboard")
     router.use(errorHandlerMiddleware)
 
